[workspace]

members = [
    "libs/megadrive-sys",
    "libs/megadrive-input",
    "libs/megadrive-graphics",
    "libs/megadrive-util",
    "tools/cargo-megadrive",
    "examples/megapong",
    "examples/megacoinflip",
    "examples/megarogue"
]

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
